--- a/src/app/components/play/play.component.html
+++ b/src/app/components/play/play.component.html
@@ -30,21 +30,21 @@
             </div>
             <div class="main__sub-description">
                 <div id="sub">
-                    <div>
+                    <div id="user" >
                         <img id="img2" class="main__name"  src="{{data.ChannelImageUrl}}" alt="">
-                         <p id="p" ><b>{{data.ChannelName}}</b> </p>  
+                         <p id="p" ><b>{{data.ChannelName}} <br> <span id="sus">{{data.Subscribers}} Subscribers</span></b> </p>  
+                         
 
                     </div>
-                        {{data.Subscribers}}
+                    <img class="main__subscriptions" src="../../../assets/img/pngwing.com.png" alt="subscriptions">
                 </div><br>
-                    <!-- <img class="main__name" src="../../../assets/img/describe-name.jpg" alt="name"> -->
-                <!-- <a href="#">
-                    <img class="main__subscriptions" src="../../../assets/img/subscribed.jpg" alt="subscriptions">
-                </a> -->
+                <!-- <img class="main__name" src="../../../assets/img/describe-name.jpg" alt="name"> -->
+                <a >
+                </a> 
                 <p>Stephen A. Smith gives his best sales pitch for Kevin Durant to sign with the New York Knicks ahead of 2019 NBA free agency, saying KD would get whatever he desired courtesy of James Dolan..</p>
             </div>
             <div class="main__more">
-                <a href="#" >
+                <a  >
                     <p>SHOW MORE</p>
                 </a>
             </div>
@@ -52,49 +52,49 @@
         <aside class="aside">
             <div class="aside__top-container">
                 <p>Up next</p>
-                <a href="#">AUTOPLAY</a>
+                <a >AUTOPLAY</a>
             </div>
-            <a href="#" class="first-img-aside">
+            <a  class="first-img-aside">
                 <img src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-             <a href="#" >
+             <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
-            <a href="#" >
+            <a  >
                 <img  class="aside__video" src="../../../assets/img/aside-pic.jpg" alt="Next video">
             </a>
             <div class="aside__more">
-                <a href="#">SHOW MORE</a>
+                <a >SHOW MORE</a>
             </div>
         </aside>
 
@@ -104,7 +104,7 @@
                     <p>6,806 Comments</p>
                 </div>
                 <div class="section__sort-container">
-                    <a href="#">
+                    <a >
                         <img src="../../../assets/img/sort.jpg" alt="sort comments">
                         <p>SORT BY</p>
                     </a>
@@ -121,83 +121,83 @@
             <div>
                 <div class="comments">
                     <img src="../../../assets/img/profile_icon.png" alt="profile icon" width="50">
-                    <p class="comments__name">John Snow <a href="#">10 months ago</a> </p>
+                    <p class="comments__name">John Snow <a >10 months ago</a> </p>
                     <p class="comments__comment">Stephen A will do anything he possibly can to get KD on the Knicks 😂.</p>
                     <div class="likes">
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/like.jpg" alt="like">
                         </a>
                         <p class="comments__text">1K</p>
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/dislike.jpg" alt="dislike">
                         </a>
-                        <a href="#" class="comments__text">REPLY</a>
+                        <a  class="comments__text">REPLY</a>
                     </div>
-                    <a href="#" class="comments_replies">View all 7 replies</a>
+                    <a  class="comments_replies">View all 7 replies</a>
                 </div>
                 <div class="comments">
                     <img src="../../../assets/img/profile_icon.png" alt="profile icon" width="50">
-                    <p class="comments__name">Arya Stark <a href="#">10 months ago</a> </p>
+                    <p class="comments__name">Arya Stark <a >10 months ago</a> </p>
                     <p class="comments__comment">Stephen A will do anything he possibly can to get KD on the Knicks 😂.</p>
                     <div class="likes">
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/like.jpg" alt="like">
                         </a>
                         <p class="comments__text">1K</p>
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/dislike.jpg" alt="dislike">
                         </a>
-                        <a href="#" class="comments__text">REPLY</a>
+                        <a  class="comments__text">REPLY</a>
                     </div>
-                    <a href="#" class="comments_replies">View all 7 replies</a>
+                    <a  class="comments_replies">View all 7 replies</a>
                 </div>
                 <div class="comments">
                     <img src="../../../assets/img/profile_icon.png" alt="profile icon" width="50">
-                    <p class="comments__name">Tyrion Lannister <a href="#">10 months ago</a> </p>
+                    <p class="comments__name">Tyrion Lannister <a >10 months ago</a> </p>
                     <p class="comments__comment">Stephen A will do anything he possibly can to get KD on the Knicks 😂.</p>
                     <div class="likes">
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/like.jpg" alt="like">
                         </a>
                         <p class="comments__text">1K</p>
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/dislike.jpg" alt="dislike">
                         </a>
-                        <a href="#" class="comments__text">REPLY</a>
+                        <a  class="comments__text">REPLY</a>
                     </div>
-                    <a href="#" class="comments_replies">View all 7 replies</a>
+                    <a  class="comments_replies">View all 7 replies</a>
                 </div>
                 <div class="comments">
                     <img src="../../../assets/img/profile_icon.png" alt="profile icon" width="50">
-                    <p class="comments__name">Mark Snow <a href="#">10 months ago</a> </p>
+                    <p class="comments__name">Mark Snow <a >10 months ago</a> </p>
                     <p class="comments__comment">Stephen A will do anything he possibly can to get KD on the Knicks 😂.</p>
                     <div class="likes">
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/like.jpg" alt="like">
                         </a>
                         <p class="comments__text">1K</p>
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/dislike.jpg" alt="dislike">
                         </a>
-                        <a href="#" class="comments__text">REPLY</a>
+                        <a  class="comments__text">REPLY</a>
                     </div>
-                    <a href="#" class="comments_replies">View all 7 replies</a>
+                    <a  class="comments_replies">View all 7 replies</a>
                 </div>
                 <div class="comments">
                     <img src="../../../assets/img/profile_icon.png" alt="profile icon" width="50">
-                    <p class="comments__name">Lord Varys <a href="#">10 months ago</a> </p>
+                    <p class="comments__name">Lord Varys <a >10 months ago</a> </p>
                     <p class="comments__comment">Stephen A will do anything he possibly can to get KD on the Knicks 😂.</p>
                     <div class="likes">
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/like.jpg" alt="like">
                         </a>
                         <p class="comments__text">1K</p>
-                        <a href="#">
+                        <a >
                             <img src="../../../assets/img/dislike.jpg" alt="dislike">
                         </a>
-                        <a href="#" class="comments__text">REPLY</a>
+                        <a  class="comments__text">REPLY</a>
                     </div>
-                    <a href="#" class="comments_replies">View all 7 replies</a>
+                    <a  class="comments_replies">View all 7 replies</a>
                 </div>
             </div>
         </section>
